- fix skill box sizing and placement on mobile - fix background gradient

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   /* gradient from webgradients.com by dima braven */
   body {
     background-image: linear-gradient(-20deg, #f794a4 0%, #fdd6bd 100%);
+    background-repeat: no-repeat;
     background-attachment: fixed;
   }
 }
